@@ -2,9 +2,11 @@
 bin_PROGRAMS = \
 	rcg2xml \
 	rcgsplit \
-	rcg3to4 \
-	rcg4to3 \
 	rcgconvert
+
+#bin_SCRIPTS = \
+#	rcg3to4 \
+#	rcg4to3
 
 rcg2xml_SOURCES = \
 	rcg2xml.cpp
@@ -23,20 +25,20 @@ rcgsplit_LDFLAGS = -L$(top_builddir)/rcsslogplayer
 rcgsplit_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
 
 
-rcg3to4_SOURCES = rcg3to4.cpp
+##rcg3to4_SOURCES = rcg3to4.cpp
+##
+##rcg3to4_CPPFLAGS = -I$(top_srcdir)
+##rcg3to4_CXXFLAGS = -Wall
+##rcg3to4_LDFLAGS = -L$(top_builddir)/rcsslogplayer
+##rcg3to4_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
 
-rcg3to4_CPPFLAGS = -I$(top_srcdir)
-rcg3to4_CXXFLAGS = -Wall
-rcg3to4_LDFLAGS = -L$(top_builddir)/rcsslogplayer
-rcg3to4_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
 
-
-rcg4to3_SOURCES = rcg4to3.cpp
-
-rcg4to3_CPPFLAGS = -I$(top_srcdir)
-rcg4to3_CXXFLAGS = -Wall
-rcg4to3_LDFLAGS = -L$(top_builddir)/rcsslogplayer
-rcg4to3_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
+##rcg4to3_SOURCES = rcg4to3.cpp
+##
+##rcg4to3_CPPFLAGS = -I$(top_srcdir)
+##rcg4to3_CXXFLAGS = -Wall
+##rcg4to3_LDFLAGS = -L$(top_builddir)/rcsslogplayer
+##rcg4to3_LDADD = -lrcssrcgparser $(BOOST_PROGRAM_OPTIONS_LIB)
 
 
 rcgconvert_SOURCES = rcgconvert.cpp
